--- a/Reg2015/View/Panels/pnlPatientInfo.xaml
+++ b/Reg2015/View/Panels/pnlPatientInfo.xaml
@@ -10,6 +10,7 @@
              mc:Ignorable="d" MinWidth="410"
              DataContext="{DynamicResource tblPatientInfoDataSource}">
     <UserControl.Resources>
+        <Convertors:RadioButtonEnumConverter x:Key="RadioButtonEnumConverter"/>
         <Convertors:NotNullToBool x:Key="NotNullToBool"/>
         <Convertors:CardKindToBool x:Key="CardKindToBool"/>
         <Convertors:LocationToBool x:Key="LocationToBool"/>
@@ -98,7 +99,7 @@
             </Grid>
 
             <TextBlock  Grid.Column="0" Text="Выдан: " HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="3"/>
-            <Grid Grid.Row="3" Grid.Column="1"  >
+            <Grid Grid.Row="3" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
@@ -127,20 +128,9 @@
                 <CheckBox  Visibility="{Binding RarVisibility, ElementName=PatientInfo}"  Margin="2,4,0,4"  IsChecked="{Binding Location, Converter={StaticResource LocationToBool}, Mode=TwoWay}" VerticalAlignment="Center" HorizontalAlignment="Left" />
                 <TextBlock  Text="Катарактальная: " Margin="15,0,0,0" VerticalAlignment="Center"/>
                 <CheckBox Margin="2,4,0,4" IsChecked="{Binding Kind, Converter={StaticResource CardKindToBool}, Mode=TwoWay}" VerticalAlignment="Center" HorizontalAlignment="Left" />
-                <Button Content="Документы" Margin="30,0,0,0" Padding="5 0" Click="btnRequareDocumentsClick" Tag="{Binding}" VerticalAlignment="Center" IsEnabled="{Binding Converter={StaticResource NotNullToBool}, Mode=OneWay}">
-                    <!--<Button.Style>
-                        <Style>
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding}" Value="null">
-                                    -->
-                    <!--<Setter Property="" Value="False"/>-->
-                    <!--
-                                    <Setter Property="bu" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>-->
-                </Button>
+
+                <RadioButton Content="Муж." IsChecked="{Binding Sex, ConverterParameter=Man, Converter={StaticResource RadioButtonEnumConverter}, Mode=TwoWay}"    GroupName="{Binding RadioButtonSexGroup, ElementName=PatientInfo, Mode=OneWay}" Margin="20,2,0,0" FontWeight="Bold" />
+                <RadioButton Content="Жен." IsChecked="{Binding Sex, ConverterParameter=Woman, Converter={StaticResource RadioButtonEnumConverter}, Mode=TwoWay }" GroupName="{Binding RadioButtonSexGroup, ElementName=PatientInfo, Mode=OneWay}" Margin="15,2,0,0" FontWeight="Bold" />
             </StackPanel>
 
             <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="7" Style="{DynamicResource RarItemStyle}" >
@@ -151,6 +141,7 @@
                     <TextBlock Text="{Binding DateCreate, StringFormat=dd.MM.yyyy H:mm}"/>
                     <TextBlock Text=", №: "/>
                     <TextBlock Text="{Binding Number}" FontWeight="Bold" />
+                    <Button Content="Документы" Margin="30,0,0,0" Padding="5 0" Click="btnRequareDocumentsClick" Tag="{Binding}" VerticalAlignment="Center" IsEnabled="{Binding Converter={StaticResource NotNullToBool}, Mode=OneWay}"/>
                 </StackPanel>
             </Border>
 
